<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Kings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_random_card">RandomCard</string>
    <string name="ace_rule">Ace=Face \n Each player must touch their face and the last person to do so must take a drink</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="next_card">Next Card</string>
    <string name="ran_car_back">Back</string>
    <string name="kings_remain">Kings Remaining: 4</string>
    <string name="cards_remaining">Cards Remaining: 52</string>
    <string name="name01">Shane McCausland - 13142976</string>
    <string name="name02">Andrew Ware - 13139568</string>
    <string name="game_over_quit">Quit Game</string>
    <string name="game_over_main">Main Menu</string>
    <string name="game_over_cam">Camera</string>
    <string name="game_over_text01">Game Over</string>
    <string name="rules_Button">Rules</string>
    <string name="rules_explanation">RulesExplanation</string>
    <string name="rules_explanation_main">Main Menu</string>
    <string name="rules_explanation_back">Back</string>
    <string name="rules_explanation_text01">Rules</string>
    <string name="newGame">New Game</string>
    <string name="quitGame">Quit Game</string>
    <string name="rules">Rules</string>
    <string name="ace_Rule">The last person to touch their face must drink.</string>
    <string name="two_Rule">The person who gets this card chooses somebody else to drink.</string>
    <string name="three_Rule">The person who gets this card must drink.</string>
    <string name="four_Rule">The last person to touch the floor must drink.</string>
    <string name="five_Rule">All the guys in the game must drink.</string>
    <string name="six_Rule">All the girls in the game must drink.</string>
    <string name="seven_Rule">The last person to raise their hand must drink.</string>
    <string name="eight_Rule">The person who gets this card picks another player in the game,  every time one of these players drinks the other player must also drink.</string>
    <string name="nine_Rule">"The person who gets this card must say a rhyme, each player,going from the persons left-hand-side must continue the rhyme, whoever fails to do so must drink."</string>
    <string name="ten_Rule">The person who gets this card must start drinking, followed all the other players in order starting on the players left-hand-side.</string>
    <string name="jack_Rule">The person who gets this card must make a rule, any player that breaks this rule must drink the rule is replaced once another rule is made).</string>
    <string name="queen_Rule">The person who picks this card is the quiz-master, anyone who answers a question asked by the \'quiz-master\' must drink.</string>
    <string name="king_Rule">"For each of the first 3 kings everyone must pour a small bit of their drink into the jug/glass/saucepan/bowl in the centre of the table. Whoever gets the final king must drink and finish this drink."</string>
    <string name="gameOverText">Who ever drew the final king from the deck must drink the jug and take a picture of themselves</string>
    <string name="photo">Photo</string>
    <string name="cardFaces">Card Faces</string>
    <string name="mainLogo">Logo</string>
    <string name="rules_Text">Rules Text</string>


</resources>
