<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_menu"

        android:layout_centerHorizontal="true"
        android:contentDescription="@string/mainLogo" />

    <Button
        android:id="@+id/new_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:layout_gravity="bottom"
        android:maxHeight="70dp"
        android:maxLength="70"
        android:maxWidth="60dp"
        android:minHeight="60dp"
        android:text="@string/newGame" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="wrap_content"

        android:text="@string/rules"
        android:id="@+id/rules_button"
        android:maxWidth="60dp"
        android:minHeight="60dp"
        android:maxHeight="60dp"
        android:maxLength="60"
        android:layout_below="@+id/new_button"
        android:layout_alignLeft="@+id/quit_button"
        android:layout_alignStart="@+id/quit_button"
        android:layout_alignRight="@+id/new_button"
        android:layout_alignEnd="@+id/new_button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/quitGame"
        android:id="@+id/quit_button"
        android:maxHeight="60dp"
        android:maxLength="60"
        android:minHeight="60dp"
        android:minWidth="60dp"
        android:layout_below="@+id/rules_button"
        android:layout_alignLeft="@+id/new_button"
        android:layout_alignStart="@+id/new_button" />

</RelativeLayout>